[tool.poetry]
name = "genesis"
version = "0.8.0"
description = "Implementation of FreeSWITCH Event Socket protocol with asyncio"
authors = ["Vitor <vitor.hov@gmail.com>"]
license = "MIT"
repository = "https://github.com/Otoru/Genesis"
readme = "README.md"
homepage = "https://github.com/Otoru/Genesis#readme"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development",
]
exclude = ["tests"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
rich = "^13.7.1"
typer = "^0.12.3"
watchdog = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = ">=22.1,<25.0"
pytest-asyncio = "^0.18.2"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
mock = "^4.0.3"

[tool.poetry.scripts]
genesis = "genesis.cli:app"

[tool.pytest.ini_options]
addopts = "-vvv -x --full-trace"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Otoru/Genesis/issues"
"Source Code" = "https://github.com/Otoru/Genesis"
