[tool.poetry]
name = "genesis"
version = "0.11.7"
description = "Implementation of FreeSWITCH Event Socket protocol with asyncio"
authors = ["Vitor <vitor.hov@gmail.com>"]
license = "MIT"
repository = "https://github.com/Otoru/Genesis"
readme = "README.md"
homepage = "https://github.com/Otoru/Genesis#readme"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development",
]
exclude = ["tests"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
rich = "^13.7.1"
typer = "^0.12.3"
watchdog = "^4.0.2"
opentelemetry-api = "^1.39.1"
opentelemetry-exporter-prometheus = "^0.60b1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = ">=22.1,<25.0"
pytest-asyncio = "^0.18.2"
pytest-cov = "^7.0.0"
tox = "^3.24.5"
mock = "^4.0.3"
opentelemetry-sdk = "^1.39.1"
mypy = "^1.19.1"
types-mock = "^5.2.0.20250924"
pytest-timeout = "^2.4.0"

[tool.poetry.scripts]
genesis = "genesis.cli:app"

[tool.pytest.ini_options]
addopts = "-vvv -x --full-trace --timeout=10"
asyncio_mode = "auto"
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning",
    "ignore:The hookimpl:pytest.PytestDeprecationWarning"
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Otoru/Genesis/issues"
"Source Code" = "https://github.com/Otoru/Genesis"

[tool.mypy]
files = ["genesis"]
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
