[tool.poetry]
name = "genesis"
version = "2026.1.26"
description = "Async Python library for FreeSWITCH Event Socket Layer (ESL) - Build high-performance telephony applications with asyncio"
authors = ["Vitor <vitor.hov@gmail.com>"]
license = "MIT"
repository = "https://github.com/Otoru/Genesis"
readme = "README.md"
homepage = "https://github.com/Otoru/Genesis#readme"
keywords = ["freeswitch", "esl", "event-socket", "telephony", "voip", "asyncio", "async", "pbx", "ivr", "sip", "webrtc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Communications :: Telephony",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
exclude = ["tests"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rich = "^13.7.1"
typer = "^0.12.3"
watchdog = "^4.0.2"
opentelemetry-api = "^1.39.1"
opentelemetry-exporter-prometheus = "^0.60b1"
redis = {version = "^5.0.0", optional = true}

[tool.poetry.extras]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = ">=22.1,<25.0"
pytest-asyncio = "^0.18.2"
pytest-cov = "^7.0.0"
tox = "^3.24.5"
mock = "^4.0.3"
opentelemetry-sdk = "^1.39.1"
mypy = "^1.19.1"
types-mock = "^5.2.0.20250924"
pytest-timeout = "^2.4.0"

[tool.poetry.group.examples.dependencies]
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
starlette = ">=0.49.1,<0.50.0"

[tool.poetry.scripts]
genesis = "genesis.cli:app"

[tool.pytest.ini_options]
addopts = "-vvv -x --full-trace --timeout=10"
asyncio_mode = "auto"
norecursedirs = ["freeswitch", ".git", ".venv", "venv", "build", "dist"]
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning",
    "ignore:The hookimpl:pytest.PytestDeprecationWarning"
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Otoru/Genesis/issues"
"Source Code" = "https://github.com/Otoru/Genesis"
"Documentation" = "https://otoru.github.io/Genesis/"
"Changelog" = "https://github.com/Otoru/Genesis/releases"

[tool.mypy]
files = ["genesis"]
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true
